--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <body>
     <div class="container">
     <header>
-      <img src="icons8-heart-50.png" />
-      <h2>Our Love</h2>
+      <div class="love">
+        <img src="icons8-heart-50.png" />
+        <h2>Our Love</h2>
+      </div>
       <div></div>
     </header>
     
@@ -22,6 +24,9 @@
             <h2>More than Imagined</h2>
             <h4>A life shaped by love, care, and family.</h4>
             <p>SCROLL DOWN</p>
+            <div class="downimg">
+              <!-- <img src="icons8-arrow-down-20.png" alt=""> -->
+            </div>
           </div>
         </div>
       </div>
