--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
         <div class="familygallery">
           
             <img
+              src="WhatsApp-Image-2026-02-12-at-17.31.56.webp"
+              loading="lazy"
+            />
+            <img
               src="WhatsApp Image 2026-02-08 at 19.11.10 (1).jpeg"
               loading="lazy"
             />
